apply muti project